Chinmayee new commit - upload main Chinmayee new commit - upload main xml Chinmayee new commit - build gradle

--- a/app/src/main/res/layout/activity_upload_main.xml
+++ b/app/src/main/res/layout/activity_upload_main.xml
@@ -28,12 +28,11 @@
         android:hint="Enter File Name"
         android:textColor="@color/white" />
 
-    <ImageView
-        android:id="@+id/image_view"
+    <com.github.barteksc.pdfviewer.PDFView
+        android:id="@+id/pdfView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:textColor="@color/white"
-
         android:layout_above="@id/progress_bar"
         android:layout_below="@id/edit_file_text_name"
         android:layout_marginTop="16dp" />
