--- a/app/src/main/res/layout/activity_image_item.xml
+++ b/app/src/main/res/layout/activity_image_item.xml
@@ -29,8 +29,8 @@
             android:textColor="@android:color/white"
             android:textSize="20sp" />
 
-        <ImageView
-            android:id="@+id/image_view_upload"
+        <com.github.barteksc.pdfviewer.PDFView
+            android:id="@+id/pdf_view"
             android:layout_width="match_parent"
             android:textColor="@color/white"
 
