--- a/app/src/main/res/layout/activity_upload_main.xml
+++ b/app/src/main/res/layout/activity_upload_main.xml
@@ -44,7 +44,10 @@
         android:layout_height="wrap_content"
         android:layout_above="@id/button_upload"
         android:layout_alignParentStart="true"
-        android:layout_margin="16dp" />
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp" />
 
     <Button
         android:id="@+id/button_upload"
