--- a/app/src/main/res/layout/activity_doctor_list.xml
+++ b/app/src/main/res/layout/activity_doctor_list.xml
@@ -1,9 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_gravity="center"
+    android:background="#6B77E5"
     tools:context=".DoctorList">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+  <TextView
+      android:id="@+id/title"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="My Doctors"
+      android:textColor="#fff"
+      android:textSize="30sp"
+      android:textStyle="bold"
+      android:layout_centerHorizontal="true"
+      android:layout_marginTop="12dp"/>
+
+  <ListView
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_below="@id/title"
+      android:layout_marginTop="15dp"
+      tools:listitem="@layout/listitem"/>
+
+
+
+
+
+</RelativeLayout>
