--- a/app/src/main/res/layout/activity_upload_main.xml
+++ b/app/src/main/res/layout/activity_upload_main.xml
@@ -38,7 +38,7 @@
         android:layout_marginBottom="20dp"
         android:background="@drawable/edittext_back"
         android:fontFamily="@font/poppins_regular"
-        android:hint="Click Twice To Select PDF"
+        android:hint="Enter name of file"
         android:includeFontPadding="false"
         android:letterSpacing="0.02"
         android:padding="12dp"
@@ -47,12 +47,30 @@
         android:textSize="16sp" />
 
     <Button
-        android:id="@+id/btn"
+        android:id="@+id/btnselect"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/editText"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
+        android:background="@drawable/button_click_ripple"
+        android:fontFamily="@font/poppins_medium"
+        android:hint="SELECT FILE"
+        android:includeFontPadding="false"
+        android:letterSpacing="0.06"
+        android:text="@string/upload_file"
+        android:textAllCaps="false"
+        android:textColor="@color/white"
+        android:textSize="19sp" />
+
+    <Button
+        android:id="@+id/btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/btnselect"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginTop="80dp"
         android:background="@drawable/button_click_ripple"
         android:fontFamily="@font/poppins_medium"
         android:hint="UPLOAD FILE"
