--- a/app/src/main/res/drawable/linear_back.xml
+++ b/app/src/main/res/drawable/linear_back.xml
@@ -3,8 +3,8 @@
     android:shape="rectangle">
 
 
-    <solid android:color="@color/colorPrimary"/>
-    <corners android:bottomLeftRadius="20dp"
-        android:bottomRightRadius="20dp"/>
+    <solid android:color="@color/purple_700"/>
+    <corners android:bottomLeftRadius="0dp"
+        android:bottomRightRadius="0dp"/>
 
 </shape>
