--- a/app/src/main/res/layout/activity_upload_main.xml
+++ b/app/src/main/res/layout/activity_upload_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#6B77E5"
     tools:context=".UploadMain">
 
     <LinearLayout
@@ -18,12 +19,12 @@
             android:id="@+id/hint"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/poppins_medium"
             android:includeFontPadding="false"
             android:letterSpacing="0.03"
             android:text="Select PDF File"
-            android:textColor="@color/black"
-            android:textSize="17sp" />
+            android:textColor="@color/white"
+            android:textSize="17sp"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
@@ -37,14 +38,14 @@
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="20dp"
         android:background="@drawable/edittext_back"
-        android:fontFamily="@font/poppins_regular"
         android:hint="Enter name of file"
         android:includeFontPadding="false"
         android:letterSpacing="0.02"
         android:padding="12dp"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textColorHint="@color/grey_800"
-        android:textSize="16sp" />
+        android:textSize="16sp"
+        android:textStyle="bold" />
 
     <Button
         android:id="@+id/btnselect"
@@ -54,14 +55,15 @@
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:background="@drawable/button_click_ripple"
-        android:fontFamily="@font/poppins_medium"
         android:hint="SELECT FILE"
+        android:textColorHint="@color/white"
         android:includeFontPadding="false"
         android:letterSpacing="0.06"
         android:text="@string/upload_file"
         android:textAllCaps="false"
         android:textColor="@color/white"
-        android:textSize="19sp" />
+        android:textSize="19sp"
+        android:textStyle="bold" />
 
     <Button
         android:id="@+id/btn"
@@ -69,17 +71,17 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/btnselect"
         android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
         android:layout_marginTop="80dp"
+        android:layout_marginEnd="20dp"
         android:background="@drawable/button_click_ripple"
-        android:fontFamily="@font/poppins_medium"
         android:hint="UPLOAD FILE"
         android:includeFontPadding="false"
         android:letterSpacing="0.06"
-        android:text="@string/upload_file"
+        android:text="UPLOAD"
         android:textAllCaps="false"
         android:textColor="@color/white"
-        android:textSize="19sp" />
+        android:textSize="19sp"
+        android:textStyle="bold" />
 
     <Button
         android:id="@+id/btnRead"
@@ -90,7 +92,6 @@
         android:layout_marginTop="40dp"
         android:layout_marginEnd="20dp"
         android:background="@drawable/button_click_ripple"
-        android:fontFamily="@font/poppins_medium"
         android:hint="SHOW UPLOADS"
         android:includeFontPadding="false"
         android:letterSpacing="0.06"
@@ -98,6 +99,8 @@
         android:text="@string/retrieve_files"
         android:textAllCaps="false"
         android:textColor="@color/white"
-        android:textSize="19sp" />
+        android:textColorHint="@color/white"
+        android:textSize="19sp"
+        android:textStyle="bold" />
 
 </RelativeLayout>
