--- a/app/src/main/res/layout/listitem.xml
+++ b/app/src/main/res/layout/listitem.xml
@@ -12,14 +12,15 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="80dp"
         android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:layout_marginStart="20dp"
+            android:layout_marginTop="10dp"
             android:src="@drawable/profile">
         </ImageView>
 
@@ -34,7 +35,7 @@
                android:layout_marginTop="20dp"
                android:text="Dr."
                android:textColor="@color/white"
-               android:textSize="26dp"
+               android:textSize="19sp"
                android:textStyle="bold"
                >
 
