--- a/app/src/main/res/layout/activity_my_patients.xml
+++ b/app/src/main/res/layout/activity_my_patients.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
-    android:background="#6B77E5"
+    android:background="@color/teal_200"
     tools:context=".PDFselect">
 
     <TextView
