--- a/app/src/main/res/layout/activity_doctor_dashboard.xml
+++ b/app/src/main/res/layout/activity_doctor_dashboard.xml
@@ -29,10 +29,10 @@
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_below="@id/titleHome"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="107dp"
         android:layout_marginTop="204dp"
         android:layout_marginEnd="32dp"
-        android:src="@drawable/patients"
+        android:src="@drawable/doctorpatient"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -42,8 +42,11 @@
         android:layout_below="@id/imagePatient"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="97dp"
         android:layout_marginTop="40dp"
-        android:text=""
+        android:text="My  Patients"
+        android:textSize="40dp"
+        android:textStyle="bold"
         >
 
     </TextView>
